--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcc 'QD'
 - !lcsh 'Chemical industry -- Sweden'
 - !lcc 'HD'
+- GITenberg
 title: Villkor och möjligheter för kemisk storindustri i Sverige
 url: http://www.gutenberg.org/ebooks/21916
